<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmr_clients_utils</name>
  <version>0.0.1</version>
  <description>A header only library to facilitate writing clients to call services or actions.</description>
  <maintainer email="erwin.lejeune@cm-robotics.com">ros</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclcpp</depend>
  
  <build_depend>rclcpp_action</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>